> Fixes contrast

--- a/src/components/medal/Medal.styl
+++ b/src/components/medal/Medal.styl
@@ -58,6 +58,9 @@
   .foreground
     color $color--terracotta
 
+  .medal__count .background
+    color $color--white
+
 .medal--tier-2
   .background
     color $color--eclipse
